motivation topic bolding change

--- a/EIPS/eip-6809.md
+++ b/EIPS/eip-6809.md
@@ -33,25 +33,25 @@ We asked ourselves the same question as many have in the past, “How does one p
 
 During the development process, the potential advantages **KBTs** explored were the main motivation factors leading to their creation;
 
-1. Completely Decentralized: The security features are fully decentralized meaning no third-party will have access to user funds when activated. This was done to truly stay in line with the premise of self-custodial assets, responsibility and values.
+1. **Completely Decentralized:** The security features are fully decentralized meaning no third-party will have access to user funds when activated. This was done to truly stay in line with the premise of self-custodial assets, responsibility and values.
 
-2. Limitless Scalability: Centralized solutions require the creation of an account and their availability may be restricted based on location. **NFKBTs** do not face regional restrictions or account creation. Decentralized security solutions such as hardware options face scalability issues requiring transport logistics, secure shipping, and vendor. **NFKBTs** can be used anywhere around the world by anyone who so wishes, provided they have access to the internet.
+2. **Limitless Scalability:** Centralized solutions require the creation of an account and their availability may be restricted based on location. **NFKBTs** do not face regional restrictions or account creation. Decentralized security solutions such as hardware options face scalability issues requiring transport logistics, secure shipping, and vendor. **NFKBTs** can be used anywhere around the world by anyone who so wishes, provided they have access to the internet.
 
-3. Fully Optional Security: Security features are optional, customizable and removable. It’s completely up to the user to decide the level of security they would like when using **NFKBTs**.
+3. **Fully Optional Security:** Security features are optional, customizable and removable. It’s completely up to the user to decide the level of security they would like when using **NFKBTs**.
 
-4. Default Functionality: If the user would like to use **NFKBTs** as a traditional ERC-721, the security features do not have to be activated. As the token inherits all of the same characteristics, it results in the token acting with traditional non-fungible **Default Behaviors**[^10]. However, even when the security features are activated, the user will still have the ability to customize the functionality of the various features based on their desired outcome. The user can pass a set of custom and or **Default Values**[^11] manually or through a dApp.
+4. **Default Functionality:** If the user would like to use **NFKBTs** as a traditional ERC-721, the security features do not have to be activated. As the token inherits all of the same characteristics, it results in the token acting with traditional non-fungible **Default Behaviors**[^10]. However, even when the security features are activated, the user will still have the ability to customize the functionality of the various features based on their desired outcome. The user can pass a set of custom and or **Default Values**[^11] manually or through a dApp.
 
-5. Unmatched Security: By calling the [addBindings](#addbindings-function) function a **Key Wallet**[^1] is now required for the [allowTransfer](#allowtransfer-function) or [allowApproval](#allowapproval-function) function. The [allowTransfer](#allowtransfer-function) function requires 4 parameters, `_tokenId`[^6], `_time`[^7], `_address`[^8], and `_allFunds`[^13], where as the [allowApproval](#allowapproval-function) function has 2 parameters, `_time`[^14] and `_numberOfTransfers`[^15]. In addition to this, **NFKBTs** have a [safeFallback](#safefallback-function) and [resetBindings](#resetbindings-function) function. The combination of all these prevent and virtually cover every single point of failure that is present with a traditional ERC-721, when properly used.
+5. **Unmatched Security:** By calling the [addBindings](#addbindings-function) function a **Key Wallet**[^1] is now required for the [allowTransfer](#allowtransfer-function) or [allowApproval](#allowapproval-function) function. The [allowTransfer](#allowtransfer-function) function requires 4 parameters, `_tokenId`[^6], `_time`[^7], `_address`[^8], and `_allFunds`[^13], where as the [allowApproval](#allowapproval-function) function has 2 parameters, `_time`[^14] and `_numberOfTransfers`[^15]. In addition to this, **NFKBTs** have a [safeFallback](#safefallback-function) and [resetBindings](#resetbindings-function) function. The combination of all these prevent and virtually cover every single point of failure that is present with a traditional ERC-721, when properly used.
 
-6. Security Fail-Safes: With **NFKBTs**, users can be confident that their tokens are safe and secure, even if the **Holding Wallet**[^5] or one of the **Key Wallets**[^1] has been compromised. If the owner suspects that the **Holding Wallet**[^5] has been compromised or lost access, they can call the [safeFallback](#safefallback-function) function from one of the **Key Wallets**[^1]. This moves the assets to the other **Key Wallet**[^1] preventing a single point of failure. If the owner suspects that one of the **Key Wallets**[^1] has been comprised or lost access, the owner can call the [resetBindings](#resetbindings-function) function from `_keyWallet1`[^3] or `_keyWallet2`[^4]. This resets the **NFKBTs** security feature and allows the **Holding Wallet**[^5] to call the [addBindings](#addbindings-function) function again. New **Key Wallets**[^1] can therefore be added and a single point of failure can be prevented.
+6. **Security Fail-Safes:** With **NFKBTs**, users can be confident that their tokens are safe and secure, even if the **Holding Wallet**[^5] or one of the **Key Wallets**[^1] has been compromised. If the owner suspects that the **Holding Wallet**[^5] has been compromised or lost access, they can call the [safeFallback](#safefallback-function) function from one of the **Key Wallets**[^1]. This moves the assets to the other **Key Wallet**[^1] preventing a single point of failure. If the owner suspects that one of the **Key Wallets**[^1] has been comprised or lost access, the owner can call the [resetBindings](#resetbindings-function) function from `_keyWallet1`[^3] or `_keyWallet2`[^4]. This resets the **NFKBTs** security feature and allows the **Holding Wallet**[^5] to call the [addBindings](#addbindings-function) function again. New **Key Wallets**[^1] can therefore be added and a single point of failure can be prevented.
 
-7. Anonymous Security: Frequently, centralized solutions ask for personal information that is stored and subject to prying eyes. Purchasing decentralized hardware solutions are susceptible to the same issues e.g. a shipping address, payment information, or a camera recording during a physical cash pick-up. This may be considered by some as infringing on their privacy and asset anonymity. **NFKBTs** ensure user confidentially as everything can be done remotely under a pseudonym on the blockchain.
+7. **Anonymous Security:** Frequently, centralized solutions ask for personal information that is stored and subject to prying eyes. Purchasing decentralized hardware solutions are susceptible to the same issues e.g. a shipping address, payment information, or a camera recording during a physical cash pick-up. This may be considered by some as infringing on their privacy and asset anonymity. **NFKBTs** ensure user confidentially as everything can be done remotely under a pseudonym on the blockchain.
 
-8. Low-Cost Security: The cost of using **NFKBTs** security features correlate to on-chain fees, the current _GWEI_ at the given time. As a standalone solution, they are a viable cost-effective security measure feasible to the majority of the population.
+8. **Low-Cost Security:** The cost of using **NFKBTs** security features correlate to on-chain fees, the current _GWEI_ at the given time. As a standalone solution, they are a viable cost-effective security measure feasible to the majority of the population.
 
-9. Environmentally Friendly: Since the security features are coded into the **NFKBT**, there is no need for centralized servers, shipping, or the production of physical object/s. Thus leading to a minimal carbon footprint by the use of **NFKBTs**, working hand in hand with Ethereum’s change to a _PoS_[^12] network.
+9. **Environmentally Friendly:** Since the security features are coded into the **NFKBT**, there is no need for centralized servers, shipping, or the production of physical object/s. Thus leading to a minimal carbon footprint by the use of **NFKBTs**, working hand in hand with Ethereum’s change to a _PoS_[^12] network.
 
-10. User Experience: The security feature can be activated by a simple call to the [addBindings](#addbindings-function) function. The user will only need two other wallets, which will act as `_keyWallet1`[^3] and `_keyWallet2`[^4], to gain access to all of the benefits **NFKBTs** offer. The optional security features improve the overall user experience and Ethereum ecosystem by ensuring a safety net for those who decide to use it. Those that do not use the security features are not hindered in any way. This safety net can increase global adoption as people can remain confident in the security of their assets, even in the scenario of a compromised wallet.
+10. **User Experience:** The security feature can be activated by a simple call to the [addBindings](#addbindings-function) function. The user will only need two other wallets, which will act as `_keyWallet1`[^3] and `_keyWallet2`[^4], to gain access to all of the benefits **NFKBTs** offer. The optional security features improve the overall user experience and Ethereum ecosystem by ensuring a safety net for those who decide to use it. Those that do not use the security features are not hindered in any way. This safety net can increase global adoption as people can remain confident in the security of their assets, even in the scenario of a compromised wallet.
 
 ## Specification
 
