--- a/EIPS/eip-6809.md
+++ b/EIPS/eip-6809.md
@@ -1,7 +1,7 @@
 ---
 eip: 6809
 title: Non-Fungible Key Bound Token
-description: An interface for Non-Fungible Key Bound Tokens, also known as an NFKBT.
+description: An interface for Non-Fungible Key Bound Tokens, also known as a NFKBT.
 author: Mihai Onila (@MihaiORO), Nick Zeman (@NickZCZ), Narcis Cotaie (@NarcisCRO)
 discussions-to: https://ethereum-magicians.org/t/non-fungible-key-bound-token-kbt/13625
 status: Draft
